--- a/src/sqlexecDevWeb/pages/sqlsrv/tables.cshtml
+++ b/src/sqlexecDevWeb/pages/sqlsrv/tables.cshtml
@@ -25,7 +25,7 @@ else if (Model.Table is not null)
                 <tr>
                     <td><a sed-sqlitem="c" sed-filter-keep>@c.Name</a></td>
                     <td>@c.ColumnName</td>
-                    <td>@c.Definition</td>
+                    <td data-lang="sql">@c.Definition</td>
                 </tr>
             }
         </table>
@@ -40,7 +40,7 @@ else if (Model.Table is not null)
                 <tr>
                     <td><a sed-sqlitem="c" sed-filter-keep>@c.Name</a></td>
                     <td>@c.ColumnName</td>
-                    <td>@c.Definition</td>
+                    <td data-lang="sql">@c.Definition</td>
                 </tr>
             }
         </table>
