--- a/src/sqlexecDevWeb/pages/sqlsrv/checkconstraints.cshtml
+++ b/src/sqlexecDevWeb/pages/sqlsrv/checkconstraints.cshtml
@@ -12,4 +12,7 @@
     <partial name="_itemPrevNxtPartial" for="@Model" />
     <h1>Check constraint @($"{Model.CheckConstraintItem.SchemaName}.{Model.CheckConstraintItem.Name}")</h1>
     <partial name="_itemTextPartial" for="@Model" />
+    <h2>Table</h2>
+    var sqlitem = Model.CheckConstraintItem.GetTableSqlItem();
+    <a sed-sqlitem="sqlitem" sed-filter-keep>@($"{sqlitem.SchemaName}.{sqlitem.Name}")</a>
 }
