--- a/src/sqlexecDevWeb/pages/sqlsrv/_ViewImports.cshtml
+++ b/src/sqlexecDevWeb/pages/sqlsrv/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Sorling.sqlexecDevWeb
-@inject Sorling.SqlConnAuthWeb.authentication.ISqlConnAuthenticationService SqlAuth
+@inject Sorling.SqlConnAuthWeb.authentication.ISqlAuthService SqlAuth
 
 @using Sorling.sqlexecDevWeb.extensions.sqlobjects
 @using Sorling.SqlExecMeta.objects.extensions
