--- a/src/sqlexecDevWeb/pages/shared/_Layout.cshtml
+++ b/src/sqlexecDevWeb/pages/shared/_Layout.cshtml
@@ -13,6 +13,7 @@
         @RenderBody()
     </div>
     <script src="~/lib/jquery/jquery.min.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery-validate/jquery.validate.min.js" asp-append-version="true"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js" asp-append-version="true"></script>
     <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js" asp-append-version="false"></script>
 </body>
